--- a/frontend/local.css
+++ b/frontend/local.css
@@ -32,12 +32,19 @@ div.device-list {
             grid-column: 1 / -1;
             grid-template-columns: subgrid;
 
-            & div.device-address {
+            & > div.device-address {
                 grid-column: 2;
+                grid-row: 1;
             }
 
-            & div.device-ping {
+            & > div.device-ping {
                 color: var(--pf-v5-global--success-color--200);
+                grid-row: 1;
+                grid-column: 3;
+            }
+
+            & > div.device-detected-model {
+                grid-row: 2;
                 grid-column: 3;
             }
         }
